# bevy_cards

./: Cargo.toml  README.md
examples/: readme.rs  slots.rs
examples/common/: card_maker.rs  mod.rs
src/: behaviour.rs  components.rs  events.rs  lib.rs  plugin.rs  settings.rs
